<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GizaTron</string>
    <string name="first_category"><![CDATA[Food & Drink]]></string>
    <string name="second_category">Things to do</string>
    <string name="third_category">Shopping</string>
    <string name="fourth_category">Services</string>
    <string name="submenu1_item1">Restaurants</string>
    <string name="submenu1_item2">Bars</string>
    <string name="submenu1_item3">Coffee</string>
    <string name="submenu1_item4">Delivery</string>
    <string name="submenu2_item1">Parks</string>
    <string name="submenu2_item2">Gyms</string>
    <string name="submenu2_item3">Art</string>
    <string name="submenu2_item4">Attractions</string>
    <string name="submenu2_item5">Nightlife</string>
    <string name="submenu2_item6">Live music</string>
    <string name="submenu2_item7">Movies</string>
    <string name="submenu2_item8">Museums</string>
    <string name="submenu2_item9">Libraries</string>
    <string name="submenu3_item1">Groceries</string>
    <string name="submenu3_item2">Beauty supplies</string>
    <string name="submenu3_item3">Car dealers</string>
    <string name="submenu3_item4"><![CDATA[Home & garden]]></string>
    <string name="submenu3_item5">Apparel</string>
    <string name="submenu3_item6">Shopping centers</string>
    <string name="submenu3_item7">Electronics</string>
    <string name="submenu3_item8">Sporting goods</string>
    <string name="submenu3_item9">Convenience stores</string>
    <string name="submenu4_item1">Hotels</string>
    <string name="submenu4_item2">ATMs</string>
    <string name="submenu4_item3">Beauty salons</string>
    <string name="submenu4_item4">Car rental</string>
    <string name="submenu4_item5">Car wash</string>
    <string name="submenu4_item6">Dry cleaning</string>
    <string name="submenu4_item7">Gas</string>
    <string name="submenu4_item8"><![CDATA[Hospitals & clinics]]></string>
    <string name="submenu4_item9"><![CDATA[Mail & shipping]]></string>
    <string name="submenu4_item10">Parking</string>
    <string name="location_images">Location images</string>
    <string name="apparel1_name">H&#38;M</string>
    <string name="apparel1_address">20 El-Eshrein St., Kafr Tohormos, Qesm Boulaq Ad Dakrour, Giza Governorate</string>
    <string name="clothing_store">Clothing Store</string>
    <string name="apparel1_description">Chain retailer supplying on-trend clothing, swimwear, accessories &#38; shoes.</string>
    <string name="apparel1_phone_number">0128 666 3589</string>
    <string name="apparel1_plus_code">255P+X7 Giza, Al Omraneyah</string>
    <string name="apparel2_name">Worker Apparel Store</string>
    <string name="apparel2_address">234 Teraat Al Gabal, AZ Zaytoun Al Gharbeyah, El-Zaytoun, Cairo Governorate</string>
    <string name="apparel2_phone_number">0109 114 2903</string>
    <string name="apparel2_plus_code">8G2H4834+6F</string>
    <string name="apparel3_phone_number">0111 312 2706</string>
    <string name="apparel3_address">1 Sayed Zakaria street, Sheraton Heliopolis، Sheraton Al Matar, Qism El-Nozha, Cairo Governorate</string>
    <string name="apparel3_name">Kinetic Apparel</string>
    <string name="restaurants1_name">Spago Restaurant</string>
    <string name="restaurants1_address">50 Gamal Salem, Ad Doqi, Giza Governorate</string>
    <string name="restaurant">Restaurant</string>
    <string name="restaurants1_description">Cosy . Casual . Good for kids</string>
    <string name="restaurants1_phone_number">0109 985 9594</string>
    <string name="restaurants1_plus_code">26R2+QC Giza, Al Omraneyah</string>
    <string name="restaurants2_name">Sirius Restaurant</string>
    <string name="restaurants2_address">10 Al Nile, Qasr an Nile, Cairo Governorate</string>
    <string name="restaurants2_description">Cosy . Casual . Groups</string>
    <string name="restaurants2_phone_number">0128 587 8535</string>
    <string name="restaurants2_plus_code">26PH+QF Cairo</string>
    <string name="restaurants3_name">Aura</string>
    <string name="restaurants3_address">35 Giza Bridge, Oula, Giza, Giza Governorate 12311</string>
    <string name="restaurants3_short_description">Lebanese Restaurant</string>
    <string name="restaurants3_description">Late-night food . Cosy . Casual</string>
    <string name="restaurants3_phone_number">02 35672111</string>
    <string name="restaurants3_plus_code">2688+7F Giza, Al Omraneyah</string>
    <string name="bars1_name">The Bar</string>
    <string name="bars1_address">1089 Corniche El Nil, Cairo, Cairo Governorate 11519</string>
    <string name="bars1_short_description">Lounge</string>
    <string name="bars1_description">Cosy . Casual . Groups</string>
    <string name="bars1_phone_number">02 27916878</string>
    <string name="bars1_plus_code">26PH+GR Cairo</string>
    <string name="bars2_name">Jazz Bar</string>
    <string name="bars2_address">Qasr an Nile, Cairo Governorate</string>
    <string name="bar">Bar</string>
    <string name="bars2_phone_number">02 27980000</string>
    <string name="bars2_plus_code">26QJ+F6 Cairo</string>
    <string name="bars3_name">Estoril</string>
    <string name="bars3_address">12، Talaat Harb, Al Ismaileyah, Qasr an Nile, Cairo Governorate</string>
    <string name="bars3_phone_number">02 25743102</string>
    <string name="bars3_plus_code">26WQ+M4 Cairo</string>
    <string name="coffee1_name">Costa Coffee</string>
    <string name="coffee1_address">45 Mossadak, Ad Doqi, Giza Governorate</string>
    <string name="coffee1_short_description">Coffee Shop</string>
    <string name="coffee1_description">Cosy . Casual . Vegetarian options</string>
    <string name="coffee1_phone_number">16 460</string>
    <string name="coffee1_plus_code">26Q4+V7 Giza, Al Omraneyah</string>
    <string name="coffee2_name">In House Cafe</string>
    <string name="coffee2_address">Al Mesaha, Ad Doqi A, Ad Doqi, Giza Governorate</string>
    <string name="coffee2_phone_number">0114 099 9555</string>
    <string name="coffee2_plus_code">26J7+M7 Giza, Al Omraneyah</string>
    <string name="coffee3_name">Cilantro</string>
    <string name="coffee3_address">Al Msaha, Ad Doqi A, Ad Doqi, Giza Governorate</string>
    <string name="cafe">Cafe</string>
    <string name="coffee3_phone_number">02 25190736</string>
    <string name="coffee3_plus_code">26P7+4H Giza, Al Omraneyah</string>
    <string name="delivery1_name">Pizza Hut</string>
    <string name="delivery1_address">Al Omraneyah Al Gharbeyah, Al Omraneyah, Giza Governorate</string>
    <string name="delivery1_short_description">Pizza Restaurant</string>
    <string name="delivery1_description">Family-friendly chain known for its made-to-order pizzas.</string>
    <string name="delivery1_phone_number">19 000</string>
    <string name="delivery1_plus_code">254W+VH Giza, Al Omraneyah</string>
    <string name="delivery2_name">Hardee\'s</string>
    <string name="delivery2_address">447 Al Haram, Al Omraneyah Al Gharbeyah, Al Omraneyah, Giza Governorate</string>
    <string name="delivery2_short_description">Fast Food Restaurant</string>
    <string name="delivery2_description">Casual . Good for kids . Groups</string>
    <string name="delivery2_phone_number">02 35746975</string>
    <string name="delivery2_plus_code">2652+PM Giza, Al Omraneyah</string>
    <string name="parks1_name">The Zoo</string>
    <string name="parks1_address">Cairo University Rd, Oula, Giza, Giza Governorate</string>
    <string name="park">Park</string>
    <string name="parks1_plus_code">26F6+WC Giza, Al Omraneyah</string>
    <string name="parks2_name">Aquarium Grotto Garden</string>
    <string name="parks2_address">El Gabalaya St, Al Gabalayah, Zamalek, Giza Governorate</string>
    <string name="parks2_description">Botanical Garden</string>
    <string name="parks2_phone_number">0109 159 3825</string>
    <string name="parks2_plus_code">3649+JC Cairo</string>
    <string name="parks3_name">Al Azhar Park</string>
    <string name="parks3_address">Salah Salem St, El-Darb El-Ahmar, Cairo Governorate</string>
    <string name="parks3_description"><![CDATA[Manicured gardens & lawns with fountains, cafes, restaurants & an open-air theater, plus city views.]]></string>
    <string name="parks3_phone_number">02 25103868</string>
    <string name="parks3_plus_code">27R7+7V Cairo</string>
    <string name="gyms1_name">H2O Gym (Ladies Only)</string>
    <string name="gyms1_address">38 Al Miqyas, AR Rawdah WA Al Meqyas, Al Manial, Cairo Governorate</string>
    <string name="gym">Gym</string>
    <string name="gyms1_phone_number">02 23619971</string>
    <string name="gyms1_plus_code">267F+9G Cairo</string>
    <string name="gyms2_name">True Gym</string>
    <string name="gyms2_address">6 Abd El-Aziz Selim, Ad Doqi, Giza Governorate</string>
    <string name="gyms2_description">Gymnastics Center</string>
    <string name="gyms2_phone_number">0111 172 2242</string>
    <string name="gums2_plus_code">26X3+6W Giza, Al Omraneyah</string>
    <string name="gyms3_name">Hers Gym</string>
    <string name="gyms3_address">19 Ismail Mohammed, Abu Al Feda, Zamalek, Cairo Governorate</string>
    <string name="gyms3_phone_number">0102 802 8454</string>
    <string name="gyms3_plus_code">3679+MC Cairo</string>
    <string name="art1_name">Townhouse Gallery</string>
    <string name="art1_address">3 Hussein Basha Al Meamari, Marouf, Qasr an Nile, Cairo Governorate</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="art1_phone_number">02 25768086</string>
    <string name="art1_plus_code">26XQ+Q5 Cairo</string>
    <string name="art2_name">Medrar For Contemporary Art</string>
    <string name="art2_address">Aprt. 4 1st floor، 7 Gamal Al Din Abou Al Mahasen, EL SAYEDA ZEINAB، Qasr an Nile, Cairo Governorate 11519</string>
    <string name="art_center">Art Center</string>
    <string name="art2_phone_number">02 27957714</string>
    <string name="art2_plus_code">26PM+V8 Cairo</string>
    <string name="art3_name">Picasso Art Gallery</string>
    <string name="art3_address">Hassan Assem, Mohammed Mazhar, Zamalek, Cairo Governorate</string>
    <string name="art3_phone_number">02 27357985</string>
    <string name="art3_plus_code">366C+HX Cairo</string>
    <string name="attractions1_name">Prince Mohamed Ali Palace</string>
    <string name="attractions1_address">1 Al Saraya, Al Manial, Cairo Governorate</string>
    <string name="tourist_attraction">Tourist Attraction</string>
    <string name="attractions1_phone_number">02 23687495</string>
    <string name="attractions1_plus_code">26GH+XH Cairo</string>
    <string name="attractions2_name">El Nil El Masry</string>
    <string name="attractions2_address">90 King Faisal St, Al Omraneyah Ash Sharqeyah, Al Omraneyah, Giza Governorate</string>
    <string name="attractions2_phone_number">02 35709454</string>
    <string name="attractions2_plus_code">2664+G7 Giza, Al Omraneyah</string>
    <string name="nightlife1_name"><![CDATA[U Bistro & Bar]]></string>
    <string name="nightlife1_address">157 Baehler\'s Mansions، Mohammed Mazhar, Zamalek, Giza Governorate</string>
    <string name="nightlife1_phone_number">0100 720 4094</string>
    <string name="nightlife1_plus_code">365F+JQ Cairo</string>
    <string name="nightlife2_name">Regina Club</string>
    <string name="nightlife2_address">30, Nile Street, Previously El Beit Beitak, Oula, Giza, Giza Governorate</string>
    <string name="nightlife2_short_description">Disco Club</string>
    <string name="nightlife2_description">Great cocktails . Cosy . Groups</string>
    <string name="nightlife2_phone_number">0114 444 3434</string>
    <string name="get_directions">Get Directions</string>
    <string name="call">Call</string>
    <string name="address">Address</string>
    <string name="hours">Hours</string>
    <string name="phone_number">Phone Number</string>
    <string name="directions">Directions</string>
</resources>